# QuartetScores

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Makefile  README.md
cmake/: Downloads.cmake  GenesisDownload.cmake  TclapDownload.cmake
genesis/: .cproject  .project  CMakeLists.txt  avianOutCorrect.txt  yeastOut.txt  yeastOutCorrect.txt
genesis/apps/: CMakeLists.txt  Integer.hpp  QuartetCountConverter.hpp  QuartetCountCounterLookupCacheOptimized.hpp  QuartetCounterFewTrees.hpp  QuartetCounterLookup.hpp  QuartetScoreComputer.hpp  QuartetScoreComputerNaive.hpp  QuartetScores.cpp  QuartetScoresNaive.cpp  TaxonMapper.hpp  TreeInformation.hpp  quartet_newick_writer.hpp
genesis/apps/tclap/: Makefile
genesis/lib/: genesis.hpp
genesis/lib/genesis/: genesis.hpp
genesis/lib/genesis/tree/formats/: quartet_newick_writer.hpp
genesis/lib/tree/formats/: quartet_newick_writer.hpp
genesis/test/src/taxonomy/: rank.cpp
genesis/test/src/tree/: quartet_newick_writer_test.cpp
genesis/test/src/utils/math/: range_minimum_query_test.cpp
src/: QuartetCounterLookup.hpp  QuartetScoreComputer.hpp  QuartetScores.cpp  TreeInformation.hpp  quartet_lookup_table.hpp
